# skillrace

./: .gitignore  LICENSE  PI_CLOSEAI_GUIDE.md  PI_YUNWU_GUIDE.md  README.md  REQUIREMENTS.md  STATUS.md  THIRD_PARTY_NOTICES.md  handoff.md  notes.md  pyproject.toml  pytest.ini  skillrace-implementation.tex  updated_pipeline.md
candidates/: D1-continuation-audit.json  D1-final-suite.md  D1-proposed-admits.md  skill-suite-candidates.md  skillsmp-pool.json  skillsmp-pool.md  skillsmp-triaged.md
docs/: 2026-07-14-checker-suite-audit.md  2026-07-14-pipeline-simplification-review.md  2026-07-14-session-handoff.md  README.md  build-plan.md  data-contracts.md  dataset-protocol.md  environments.md  evaluation-reviewer-guide.md  generator.md  implementation-status.md  issta-artifact-requirements.md  pi-integration.md  pipeline-walkthrough.md  property-checker.md  rq3-artifact-guide.md  runner.md  trace-format.md
lab_papers/: capscope.tex  gordian.tex  hoareprompt.tex  mnimi.tex
licenses/: README.md
paper/: refs.bib  skillrace.aux  skillrace.bbl  skillrace.blg  skillrace.fdb_latexmk  skillrace.fls  skillrace.out  skillrace.tex
scenarios/: README.md  build_base.sh  lint_checks.sh
scripts/: artifact_smoke.sh  closeai_hello.py  run_experiment.py  run_model_track.sh  run_suite.sh  yunwu_hello.py  yunwu_hello_cost.py
skillrace/: __init__.py  ablations.py  adaptive_artifacts.py  aggregate.py  analyze_rq1.py  analyze_rq3.py  artifact_freeze.py  calibrate.py  campaign_engine.py  campaign_protocol.py  candidate_policy.py  check_properties.py  closeai.py  compile_checks.py  (+50 more)
(+2404 files in other folders)
