[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "skillrace"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[tool.setuptools.packages.find]
include = ["skillrace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "docker: requires a local Docker daemon",
  "live: spends model or agent budget",
]
